Changelog for 1.3 Series
Initial Release:  Monday, Oct 12 2011
Supported Presently

Changelog for 1.3.24
* Fixed error in msgid for "Add Language" (Havard S, h/t Robert C)
* Moved Makefile.PL to version_from to reduce errors (Chris T, h/t Robert C)

Chris T is Chris Travers
Havard S is Havard Sorli
Robert C is Robert James Clay

Changelog for 1.3.23
* Fixed query string/stdin handling where both stdin and query string are set
* Moved http error framework to use header methods (Chris T)
* Fixed warning about incorrect method for ar/ap transactions (Chris T)
* Fixed fatal gettext errors in ar_EG, fi, nb po's (Havard S)
* Fixed prices being selected on RFQ (Chris T, h/t Erik H)
* Fixed discount wrong after multiple parts selection (Chris T, h/T Istvan P)
* Fixed action not found on redirect (Chris T, h/t Brian W)
* Fixed issues upgrading from 1.2 if email and bcc are filled in (Chris T)
* Fixed error exporting aging to csv (Havard S, h/t Nick P, 3559403)
* Fixed receipt reversal screen erroring (Chris T, h/t Nick P)
* Fixed select all button causing error on aging rpt (Chris T)
* Fixed query err when generating sales orders from time cards (Erik H, 3559621)
* Fixed backup does not test for failure (Havard S, h/t Nick P, 3574876)
* prepre_company_database.sh now only gives user mgmt rights (Berend T)
* Fixed end date, etc not showing on summary list, (Chris T, 3556279)

Berend T is Berend Tober
Chris T is Chris Travers
Havard S is Havard Sorli
Erik H is Erik Huelsmann
Istvan P is Istvan Pongracz
Brian W is Brian Wolf 
Nick P is Nick Prater
Robert C is Robert James Clay

Changelog for 1.3.22
* Fixed error when trying to save multiple make/models for a part (Chris T)
* Better error handling when date is entered into statement balance (Chris T)
* Added pricegroup selection back to entity credit account (Chris T, 3550056)
* Fix for slow performance with Form->all_years (Chris T, h/t Neil S)[1]
* Revamped database load test cases (Chris T)