@@ -5,7 +5,9 @@ Supported Presently
 Changelog for 1.3.24
 * Fixed error in msgid for "Add Language" (Havard S, h/t Robert C)
 * Moved Makefile.PL to version_from to reduce errors (Chris T, h/t Robert C)
+* Prompts added to configure_apache.sh (Berend T)
 
+berend T is Berend Tober
 Chris T is Chris Travers
 Havard S is Havard Sorli
 Robert C is Robert James Clay
